--- a/aws/PAS-Component-Single-Deployment.yaml
+++ b/aws/PAS-Component-Single-Deployment.yaml
@@ -725,15 +725,13 @@ Resources:
               waitAfterCompletion: 0
             4-PSMHardening:
               command: !Sub >
-                Set-Location "C:\Cyberark\PSM\InstallationAutomation"
-                $Action = .\Execute-Stage.ps1 "Hardening\HardeningConfig.xml"
-                $Action | Out-File -FilePath "psm_hardening_log.log"
-                $Result = Get-Content "psm_hardening_log.log" -Raw | ConvertFrom-Json
-                if ($Result.isSucceeded -eq 0) {
-                    exit 0
-                } else {
-                    exit 1
-                }
+                powershell.exe -Command "& {
+                    Set-Location 'C:\Cyberark\PSM\InstallationAutomation';
+                    $Action = .\Execute-Stage.ps1 'Hardening\HardeningConfig.xml';
+                    $Action | Out-File -FilePath 'C:\Cyberark\PSM\InstallationAutomation\psm_hardening_log.log';
+                    $Result = Get-Content 'C:\Cyberark\PSM\InstallationAutomation\psm_hardening_log.log' -Raw | ConvertFrom-Json;
+                    if ($Result.isSucceeded -eq 0) { exit 0 } else { exit 1 }
+                }"
               waitAfterCompletion: 0
             5-ChangeHostname:
               command: !Sub >
