--- a/aws/PAS-Component-Single-Deployment.yaml
+++ b/aws/PAS-Component-Single-Deployment.yaml
@@ -724,14 +724,13 @@ Resources:
               command: sc config "CyberArk Privileged Session Manager" start=auto
               waitAfterCompletion: 0
             4-PSMHardening:
+              cwd: 'C:\Cyberark\PSM\InstallationAutomation'
               command: !Sub >
-                powershell.exe -Command "& {
-                    Set-Location 'C:\Cyberark\PSM\InstallationAutomation';
-                    $Action = .\Execute-Stage.ps1 'Hardening\HardeningConfig.xml';
-                    $Action | Out-File -FilePath 'C:\Cyberark\PSM\InstallationAutomation\psm_hardening_log.log';
-                    $Result = Get-Content 'C:\Cyberark\PSM\InstallationAutomation\psm_hardening_log.log' -Raw | ConvertFrom-Json;
-                    if ($Result.isSucceeded -eq 0) { exit 0 } else { exit 1 };
-                }"
+                powershell.exe -Command ^
+                $Action = .\Execute-Stage.ps1 'Hardening\HardeningConfig.xml' -displayJson; ^
+                $Action ^| Out-File -FilePath 'C:\Cyberark\PSM\InstallationAutomation\psm_hardening_log.log'; ^
+                $Result = Get-Content 'C:\Cyberark\PSM\InstallationAutomation\psm_hardening_log.log' -Raw ^| ConvertFrom-Json; ^
+                exit $Result.isSucceeded;
               waitAfterCompletion: 0
             5-ChangeHostname:
               command: !Sub >
